# avatar-engine

./: .avatar.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  activate.fish  activate.sh  avatar_engine.py  config.yaml  examples.py  install.sh  mcp_tools.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
avatar_engine/: __init__.py  activity.py  config.py  config_sandbox.py  engine.py  events.py  safety.py  types.py
avatar_engine/bridges/: __init__.py  _acp_session.py  base.py  claude.py  codex.py  gemini.py
avatar_engine/cli/: __init__.py  __main__.py  app.py  display.py
avatar_engine/cli/commands/: __init__.py  chat.py  health.py  mcp.py  repl.py  session.py  version.py
avatar_engine/sessions/: __init__.py  _base.py  _claude.py  _codex.py  _gemini.py  _titles.py
avatar_engine/utils/: __init__.py  logging.py  metrics.py  rate_limit.py  retry.py  version.py
avatar_engine/web/: __init__.py  __main__.py  bridge.py  protocol.py  server.py  session_manager.py  uploads.py
avatar_engine/web/model_discovery/: __init__.py  base.py  cache.py  claude_parser.py  codex_parser.py  gemini_parser.py  registry.py
bridges/: __init__.py  base_bridge.py  claude_bridge.py  gemini_bridge.py
examples/: avatar.example.yaml  basic_chat.py  gui_integration.py  simple_mcp_server.py  streaming_avatar.py
examples/web-demo/: avatar-preview.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
examples/web-demo/src/: App.tsx  index.css  main.tsx
examples/web-demo/src/__tests__/: bust-animation.test.ts  consumer-patterns.test.tsx  error-handling.test.ts  new-session-button.test.tsx  providers-domain.test.ts  response-guards.test.tsx  setup.ts  smoke.test.tsx  useWidgetMode.test.ts  (+1 more)
plans/: ACP_GENERATION_CONFIG_PLAN.md  AVATAR_GUI_PLAN.md  CLI_DISPLAY_REWRITE_PLAN.md  CLI_PLAN.md  CLI_REVIEW_FIX_PROPOSAL.md  CODEX_INTEGRATION_PLAN.md  CONTEXT_METADATA_PLAN.md  GUI_READINESS_PLAN.md  MEDIA_MULTIMODAL_PLAN.md  PHASE7_WEB_BRIDGE_PLAN.md  PLAN-New-Session-Button.md  PLAN-v1.2-stability-and-dynamic-models.md  PLAN.md  SAFETY_TOGGLE_GUI_PLAN.md  SESSION_GUI_PLAN.md  SESSION_HANDOFF.md  SESSION_MANAGEMENT_PLAN.md  STABILIZATION_PLAN.md  acp-bug-analysis.md  icons-preview-v3.html  synapse-integration-guide.md
plans/docs/: README.md  acp-python-sdk.md  claude-code-cli-reference.md  claude-code-headless.md  codex-acp-adapter.md  codex-cli-reference.md  gemini-3-developer-guide.md  gemini-acp-issues-and-fixes.md  gemini-cli-configuration.md  gemini-cli-headless.md
plans/mockups/: bust-data.js  variant-a-companion-drawer.html  variant-a-polished.html  variant-b-floating-island.html  variant-c-stage-mode.html
scripts/: stabilize_busts.py  start-web.sh
tests/: __init__.py  test_acp_generation_config.py  test_async_flow.py  test_bridge_observability.py  test_bridges.py  test_cli.py  test_cli_display.py  test_cli_repl_lifecycle.py  test_codex_acp_experimental.py  test_codex_bridge.py  test_codex_engine_integration.py  test_config.py  test_diagnostics_capabilities.py  test_edge_cases.py  test_engine.py  test_error_recovery.py  test_event_integration.py  test_event_performance.py  test_events.py  test_gemini_acp.py  test_gemini_helpers.py  test_logging.py  test_media_bridges.py  test_metrics.py  test_model_discovery.py  test_model_discovery_live.py  test_rate_limit.py  test_safety.py  test_session.py  test_session_stores.py  test_session_titles.py  test_system_prompt_budget.py  test_types.py  test_uploads.py  test_web_bridge.py  test_web_integration.py  test_web_protocol.py  test_web_server.py  test_zero_footprint.py
tests/fixtures/: claude_models.html  codex_models.html  gemini_models.html
tests/integration/: __init__.py  bench_acp_startup.py  conftest.py  test_acp_settings_diagnostic.py  test_real_acp.py  test_real_capabilities.py  test_real_chat.py  test_real_cli.py  test_real_cli_display_rewrite.py  test_real_cli_features.py  test_real_codex.py  test_real_display.py  test_real_mcp.py  test_real_repl_display.py  test_real_repl_pty.py  test_real_safety.py  test_real_sessions.py  test_real_system_prompt.py  test_repl_prompt_toolkit_integration.py
(+37 files in other folders)
