[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avatar-engine"
dynamic = ["version"]
description = "Application-specific AI avatar runtime with configurable behavior, context-aware reasoning, and MCP tool orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Antonin Stefanutti" }
]
keywords = ["ai", "avatar", "agent", "mcp", "context-aware", "tool-orchestration", "claude", "gemini", "application-integration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "agent-client-protocol>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
cli = [
    "click>=8.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
    "python-multipart>=0.0.5",
]

[project.scripts]
avatar = "avatar_engine.cli:cli"
avatar-web = "avatar_engine.web.__main__:main"

[project.urls]
Homepage = "https://github.com/raven2cz/avatar-engine"
Repository = "https://github.com/raven2cz/avatar-engine"
Issues = "https://github.com/raven2cz/avatar-engine/issues"

[tool.hatch.version]
path = "avatar_engine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["avatar_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Exclude integration tests from default runs
addopts = "--ignore=tests/integration"
markers = [
    "integration: marks tests as integration tests (require real CLI tools)",
    "gemini: marks tests as requiring Gemini CLI",
    "claude: marks tests as requiring Claude CLI",
    "pty: marks tests as requiring PTY support (/dev/pts)",
    "slow: marks tests as slow (API calls)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
